Address additional code review comments